--- a/work.qmd
+++ b/work.qmd
@@ -23,11 +23,9 @@ I led a team studying human-automation interaction in small modular reactor oper
 Key contributions included developing methods to evaluate machine learning model explainability, conducting human-in-the-loop simulations, and participating in OECD Nuclear Energy Agency AI safety initiatives. I also contributed to multi-year research proposals and helped translate research findings into practical regulatory guidance.
 
 **Earlier Research Experience**\
-Six years of mixed-methods research across safety-critical industries
+Six years of mixed-methods research across safety-critical industries, including nuclear power, process control, transportation, telecommunications, and insurance. 
 
-My research spans nuclear power, process control, transportation, telecommunications, and insurance. I specialize in mixed-methods approaches including human-in-the-loop simulations, statistical inference, and cognitive task analysis.
-
-Other projects include:
+Past projects include:
 
 -   Evaluating ML interfaces for reliability engineers at Ericsson's Global AI Accelerator
 
@@ -47,8 +45,9 @@ For a full list of publications, visit: research gate or google scholar.
 
 -   Gentile D., Donmez, B., & Jamieson, G. A. (2025). [Human performance effects of combining counterfactual explanations with normative and contrastive explanations in supervised machine learning for automated decision assistance.](https://www.sciencedirect.com/science/article/pii/S1071581924002179) *International Journal of Human-Computer Studies*, 196, 103434.\
 -   Gentile D., Donmez, B., & Jamieson, G. A. (2023). [Human performance consequences of normative and contrastive explanations: an experiment in machine learning for reliability maintenance](https://www.sciencedirect.com/science/article/pii/S0004370223000917). *Artificial Intelligence*, 103945.\
--   Gentile D., Jamieson G. A., Donmez B. (2021). [Evaluating human understanding in explainable AI systems.](https://hfast.mie.utoronto.ca/wp-content/uploads/HCXAI2021_paper_25.pdf) *ACM Human Factors in Computing Systems (CHI) Workshop on Operationalizing Human-Centered Perspectives in Explainable AI*, 2021, Yokohama, Japan.
+
 
 ### Other Contributions
 
--   Gentile, D., et al. *Title of report.* Organization/Agency, Year.
+-   Gentile, D. (2023) [Exploring user interaction challenges with large language models](https://srinstitute.utoronto.ca/news/exploring-user-interaction-challenges-with-large-language-models). Schwartz Reisman Insitute for Technology and Society.
+
