--- a/projects.qmd
+++ b/projects.qmd
@@ -4,7 +4,7 @@ subtitle: "Selected projects on human use of automation and machine learning sys
 listing:
   contents: portfolio
   sort: "date desc"
-  type: grid
+  type: default
   #fields: [date, author, title, description, image]
   #categories: false
   #sort-ui: false
