--- a/about.qmd
+++ b/about.qmd
@@ -16,10 +16,10 @@ title: "About"
        #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-I apply human factors engineering methods and principles at all phases of product and technology development. I specialize in mixed methods approaches, including human-in-the-loop simulations, statistical inference, and cognitive walkthroughs to evaluate design concepts and inform feature development for diverse user populations.
+I apply human factors engineering methods and principles to product and technology development. I specialize in mixed methods research, including human-in-the-loop simulations, statistical inference, and cognitive walkthroughs to evaluate design concepts and inform feature development for diverse user populations.
 
-In previous research roles, I have designed and led rigorous user studies, providing recommendations to cross-functional teams across design, engineering, product marketing, and development. My goal is ensuring technology enhances human abilities, meets industry standards, and complies with ethical principles and research regulations.
+Over the past six years, I've applied these methods across different industries, including nuclear power, telecommunications and insurance risk models. The common thread is helping organizations reduce risk, improve performance, and optimize user experience. Currently, I work as a human factors consultant at Kinectrics, building on postdoctoral research that informed nuclear safety regulations.
 
-Over the past six years, I\'ve applied these methods across several safety-critical industries, including nuclear power, telecommunications and insurance risk models. The common thread is helping organizations reduce risk, improve performance, and optimize user experience. Currently, I work as a human factors consultant at Kinectrics, building on postdoctoral research that informed nuclear safety regulations.
+In past roles, I have led several user studies, and worked with cross-functional teams across design, engineering, product marketing, and development. My goal is ensuring technology enhances human abilities, meets industry standards, and complies with ethical principles and research regulations.
 
 I value authenticity, curiosity, real-world engagement and appreciation of nature. I believe the best engineering solutions come from understanding both the technical systems and the people who operate them, combining quantitative and qualitative approaches to make technology safe, effective, and enjoyable to use.
