--- a/index.qmd
+++ b/index.qmd
@@ -17,4 +17,4 @@ about:
 
 **Welcome**
 
-I apply human factors engineering methods to the design and development of products and technology, ensuring regulatory alignment.
+I apply human factors methods to the design and development of products and technology, ensuring regulatory alignment.
