--- a/about.qmd
+++ b/about.qmd
@@ -16,10 +16,8 @@ title: "About"
        #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-I apply human factors engineering methods to product and system design, ensuring technology enhances human abilities while meeting regulations.
+I apply human-centered methods to the design and evaluation of systems and technology. I specialize in mixed-methods research, combining qualitative and quantitative approaches to evaluate design concepts and inform development for diverse user populations.
 
-I specialize in mixed methods research, using human-in-the-loop simulations, statistical inference, and cognitive walkthroughs to evaluate design concepts and inform future developments for diverse user populations. Over the past six years, I've worked across nuclear power, telecommunications, and insurance risk modeling, helping organizations reduce risk, improve performance, and optimize user experience.
+Over the past six years, I've worked across nuclear power, telecommunications, and insurance risk modeling, helping organizations reduce risk, improve performance, and optimize user experience. Currently, I work as human factors consultant at Kinectrics, building on postdoc research that informed emerging human factors issues in nuclear safety regulation. In previous roles, I've led research programs and collaborated with cross-functional teams across design, engineering, product marketing, and development.
 
-Currently, I work as human factors consultant at Kinectrics, building on postdoc research that informed nuclear safety regulations. In previous roles, I've led user studies and collaborated with cross-functional teams across design, engineering, product marketing, and development.
-
-I value authenticity, curiosity, real-world engagement, and appreciation of nature. I believe the best engineering solutions come from understanding both technical systems and the people who operate them, combining quantitative and qualitative approaches to make technology effective, safe, and enjoyable to use.
+I value authenticity, real-world engagement, and appreciation of nature. I believe the best engineering solutions come from understanding both technical systems and the people who operate them, combining quantitative and qualitative approaches to make technology effective and enjoyable to use.
