--- a/work.qmd
+++ b/work.qmd
@@ -14,7 +14,7 @@ toc: true
 ## Current
 
 **Human Factors Consultant**\
-Kinectrics (Toronto)
+Kinectrics
 
 Kinectrics is an engineering consulting firm working in the energy and medical industries. I work in Design and Engineering Services, helping clients ensure that plant, system, and equipment designs are effective and safe for operators across U.S. and Canadian nuclear utilities.
 
@@ -28,27 +28,35 @@ Selected past projects:
 
 -   **Human Performance in Operation of Small Modular Reactors**\
     *Team Lead, University of Toronto, 2025*\
-    Experimental research program informing human factors sections of emerging nuclear regulations. Focus areas included human performance measurement, automation integration, and multi-unit operations.
+    Directed an experimental research program informing the Canadian Nuclear Safety Commission's emerging regulations on small modular reactors (SMRs). Developed proposals for CNSC-NSERC addressing topics such as human performance measurement, automation integration, multi-unit operations, and the impact of SMR deployment on Indigenous communities.
 
 -   **User-in-the-Loop Experiments in Machine Learning Explainability**\
     *PhD researcher, University of Toronto, 2024*\
-    Developed cognitive science--based methods to improve the explainability of machine learning models + Designed and conducted user experiments to evaluate user reliance. Findings showed that combining normative, contrastive, and counterfactual explanations can enhance user performance, while revealing potential limitations.
+    Developed cognitive science--based methods to improve the explainability of ML models, and led user experiments to test how different forms of explanation affected decision reliance. Demonstrated that combining normative, contrastive, and counterfactual explanations improved performance but also exposed systemic risks. Findings contributed to human-centered AI design frameworks and research on responsible automation.
 
 -   **Design and Evaluation of Machine Learning Interfaces for Reliability Engineers**\
     *Intern, Ericsson, 2023*\
-    Our team developed a glyph-based polar (GBP) chart to improve workflow of reliability engineers, enabling comparisons across machine learning models and explanation methods. User testing with Ericsson data scientists showed the GBP chart helped identify key variables and review model outputs.
+    Our team developed a glyph-based polar (GBP) chart to improve workflow of reliability engineers, enabling comparisons across machine learning models and explanation methods. Participatory testing with Ericsson data scientists showed the GBP chart helped identify key variables and review model outputs.
+
+## Teaching
+
+**Human-Centered System Design (MIE240); Statistics (MIE237)**\
+*Teaching Assistant, Dept. of Mechanical and Industrial Engineering, University of Toronto*\
+Guided 400+ students in applying participatory design methods with Toronto-based partners (Voilá, Metro, Kritic). Mentored teams to incorporate perspectives of minority groups (such as older adults and vision-impaired users) into design solutions, building capacity for inclusive design methods among future engineers. Taught statistics and research methods alongside human-centered design, equipping students to evaluate outcomes and integrate evidence-based approaches.
 
 ## Research
 
-In earlier research positions, I have:
+Summary:
 
--   Led a team of six on human--automation research for for small modular reactor operations
+-   Led a team of six on human--automation research for small modular reactor operations
 
--   Increased the human factors evidence base for nuclear regulation
+-   Increased the human factors evidence on contemporary issues in nuclear regulation (human performance measurement, levels of automation, multi-unit operations).
 
 -   Developed funding proposals for multi-year research programs
 
--   Participated in OECD NEA and SRI research initiatives on societal impacts of emerging tech
+-   Participated in OECD NEA and SRI research initiatives on societal impacts of technology
+
+-   Led experiments on the effects of post-hoc machine learning explanations on user performance
 
 -   Consulted on evaluation of machine learning risk
 
@@ -62,7 +70,7 @@ In earlier research positions, I have:
 
 ### Selected Publications
 
-Visit Research Gate or Google Scholar for the complete list.
+For the full list, visit Research Gate or Google Scholar.
 
 #### Peer-Reviewed
 
@@ -70,7 +78,7 @@ Visit Research Gate or Google Scholar for the complete list.
 
 -   Gentile D., Donmez, B., & Jamieson, G. A. (2023). [Human performance consequences of normative and contrastive explanations: an experiment in machine learning for reliability maintenance](https://www.sciencedirect.com/science/article/pii/S0004370223000917). *Artificial Intelligence*, 103945.\
 
--   Nguyen, T., Gentile D., Jamieson, G. A., Gosine, R., & Purmhedi, H. (2023). [Designing a Glyph-based Polar Chart to Interpret the Results of Machine Learning Models.](https://journals.sagepub.com/doi/abs/10.1177/10648046231166047) In *Ergonomics in Design: The Quarterly of Human Factors Applications*.
+-   Nguyen, T., Gentile D., Jamieson, G. A., Gosine, R., & Purmhedi, H. (2023). [Designing a glyph-based polar chart to interpret the results of machine learning models.](https://journals.sagepub.com/doi/abs/10.1177/10648046231166047) In *Ergonomics in Design: The Quarterly of Human Factors Applications*.
 
 #### Blog Articles
 
