--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Davide Gentile"
-subtitle: "Human Factors Consultant"
+subtitle: "Human-Centered Researcher and Consultant"
 about:
   template: jolla
   links:
@@ -17,4 +17,4 @@ about:
 
 **Welcome**
 
-I apply human factors methods to the design and development of products and technology, ensuring regulatory alignment.
+I apply human-centered research methods to technology and system design, combining qualitative and quantitative approaches to evaluate concepts and guide development for diverse user populations. My work spans AI systems and nuclear power, translating research into practical insights for effective and safe technology.
