--- a/work.qmd
+++ b/work.qmd
@@ -41,8 +41,9 @@ Selected past projects:
 ## Teaching
 
 **Human-Centered System Design (MIE240); Statistics (MIE237)**\
-*Teaching Assistant, Dept. of Mechanical and Industrial Engineering, University of Toronto*\
-Guided 400+ students in applying participatory design methods with Toronto-based partners (Voilá, Metro, Kritic). Mentored teams to incorporate perspectives of minority groups (such as older adults and vision-impaired users) into design solutions, building capacity for inclusive design methods among future engineers. Taught statistics and research methods alongside human-centered design, equipping students to evaluate outcomes and integrate evidence-based approaches.
+*Teaching Assistant, Dept. of Mechanical and Industrial Engineering, University of Toronto*
+
+Guided 400+ students in applying participatory design methods with Toronto-based industry partners (Voilá, Metro, Kritic). Mentored teams to incorporate perspectives of marginalized groups (such as older adults and vision-impaired users) into design solutions, building capacity for inclusive design methods among future engineers. Taught statistics and research methods alongside human-centered design, equipping students to evaluate outcomes and integrate evidence-based approaches.
 
 ## Research
 
