--- a/index.qmd
+++ b/index.qmd
@@ -17,4 +17,4 @@ about:
 
 **Welcome**
 
-I use mixed-methods research to inform technology and system design. 
+I study how people work with technology to guide design and policy.
