--- a/about.qmd
+++ b/about.qmd
@@ -16,4 +16,6 @@ title: "About"
        #href: https://open.spotify.com/user/1182380789?si=7ca4ee59ac0b4619
 ---
 
-Hello, I work in research, analysis, and consulting. I research how automation can augment human decisions, analyze tools, equipment, and systems in nuclear power, and consult on data science and machine learning design.
+I research how people interact with technology in real-world settings. I use a range of methods to inform evidence-based design and policy.
+
+In earlier roles, I have led research programs on topics ranging from operation of small modular reactors to machine learning explainability, and have consulted on data science and model evaluation. I trained many students in statistics, human factors, and system design.
